--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,7 +37,11 @@ layout: default
     <!-- News -->
     {% if page.news and site.announcements.enabled -%}
     <h2>
-      <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+      <a
+        href="{{ '/news/' | relative_url }}"
+        style="color: inherit; text-decoration: underline"
+        >News</a
+      >
     </h2>
     {%- include news.html limit=true %} {%- endif %}
 
@@ -52,10 +56,8 @@ layout: default
 
     <!-- Selected papers -->
     {% if page.selected_papers -%}
-    <h2>
-      <a href="{{ '/publications/' | relative_url }}" style="color: inherit"
-        >selected publications</a
-      >
+    <h2 style="color: inherit; text-decoration: underline">
+      Selected publications
     </h2>
     {%- include selected_papers.html %} {%- endif %}
 
