--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,7 +79,7 @@
 {% if site.enable_darkmode %}
 <link
   rel="stylesheet"
-  href="https://combinatronics.io/jwarby/pygments-css/master/github.css"
+  href="https://cdn.jsdelivr.net/gh/jwarby/jekyll-pygments-themes@master/{{ site.highlight_theme_dark | append: '.css' }}"
   media="none"
   id="highlight_theme_dark"
 />
