--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,12 +42,12 @@
 />
 
 <!-- Code Syntax Highlighting -->
-<!-- <link
+<link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/gh/jwarby/jekyll-pygments-themes@master/{{ site.highlight_theme_light | append: '.css' }}"
+  href="https://combinatronics.io/jwarby/pygments-css/master/github.css "
   media=""
   id="highlight_theme_light"
-/> -->
+/>
 
 {% if page.toc and page.toc.sidebar %}
 <!-- Sidebar Table of Contents -->
@@ -76,14 +76,14 @@
 />
 
 <!-- Dark Mode -->
-<!-- {% if site.enable_darkmode %}
+{% if site.enable_darkmode %}
 <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/gh/jwarby/jekyll-pygments-themes@master/{{ site.highlight_theme_dark | append: '.css' }}"
+  href="https://combinatronics.io/jwarby/pygments-css/master/github.css"
   media="none"
   id="highlight_theme_dark"
 />
 
 <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
 <script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>
-{% endif %} -->
+{% endif %}
