--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
 <!-- Code Syntax Highlighting -->
 <link
   rel="stylesheet"
-  href="https://combinatronics.io/jwarby/pygments-css/master/github.css "
+  href="https://combinatronics.io/jwarby/pygments-css/master/github.css"
   media=""
   id="highlight_theme_light"
 />
@@ -79,7 +79,7 @@
 {% if site.enable_darkmode %}
 <link
   rel="stylesheet"
-  href="https://combinatronics.io/jwarby/pygments-css/master/github.css"
+  href="https://combinatronics.io/jwarby/jekyll-pygments-themes@master/{{ site.highlight_theme_dark | append: '.css' }}"
   media="none"
   id="highlight_theme_dark"
 />
